--- a/src/main/resources/templates/meta.html
+++ b/src/main/resources/templates/meta.html
@@ -51,6 +51,22 @@
     </style>
 </head>
 <body>
+<div class="br-dev-nav" style="
+    padding:8px 16px;
+    background:#111111;
+    color:#ffffff;
+    font-size:12px;
+    display:flex;
+    gap:16px;
+    align-items:center;
+    justify-content:flex-start;
+">
+    <span style="opacity:0.7;">DEV NAV</span>
+    <a href="/player/home" style="color:#ffffff;text-decoration:none;">Home</a>
+    <a href="/player/song?producerId=0&projectIndex=0&track=1" style="color:#ffffff;text-decoration:none;">Song Worksheet</a>
+    <a href="/player/meta?producerId=0&projectIndex=0&track=1" style="color:#ffffff;text-decoration:none;">Meta / Credits</a>
+</div>
+
 <header>
     <div class="title">Block Radius Player - Meta Data</div>
     <nav>
